# pyiceberg_substrait

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  environment.yaml  pyproject.toml
src/icetrait/: __init__.py  _version.py
src/icetrait/duckdb/: wrapper.py
src/icetrait/iceberg/: process.py
src/icetrait/logging/: logger.py
src/icetrait/substrait/: visitor.py
src/icetrait/utils/: files.py
tests/: test_complex_schema_evolution.py  test_duckdb_features.py  test_import.py  test_logging.py  test_pyiceberg_features.py
